Slash commands, first pass
Here we go! Mostly an experiment to see how well slash commands work in
the first place. They can be added piecemeal; text commands aren't
going away.

Only balance, baltop, delquote, frommorse, pick, tomorse, and transfer
have an associated slash command.

API parity with regards to replays, buttons and others is planned but
more work.